welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:2: error: not found: value nbDe9
  nbDe9=0
  ^arrayCount9:5: error: not found: value nbDe9
      nbDe9=nbDe9+1
      ^arrayCount9:8: error: not found: value nbDe9
  return nbDe9
         ^